2008-07-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Alessandro Decina

	* gst/mpegtsparse/mpegtsparse.c:
	Fix memory leak by unreffing structures when not needed.
	Fixes #539292.

2008-07-07  Stefan Kost  <ensonic@users.sf.net>

	* gst/sdp/gstsdpdemux.c:
	  Use floating point math for latencies < 0 sec in log output.

2008-07-06  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/tvtime/tomsmocomp/TomsMoCompAll2.inc:
	Mark internal processing functions as static inline for quite some
	speedup as they're used only once and need to get many local variables
	passed as parameter.

2008-07-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/gstdeinterlace2.c:
	(gst_deinterlace_method_deinterlace_frame),
	(gst_deinterlace2_set_method), (gst_deinterlace2_init),
	(gst_deinterlace2_reset_history), (gst_deinterlace2_reset),
	(gst_deinterlace2_set_property), (gst_deinterlace2_get_property),
	(gst_deinterlace2_pop_history), (gst_deinterlace2_head_history),
	(gst_deinterlace2_push_history), (gst_deinterlace2_chain),
	(gst_deinterlace2_setcaps), (gst_deinterlace2_sink_event),
	(gst_deinterlace2_change_state), (gst_deinterlace2_src_event),
	(gst_deinterlace2_src_query):
	* gst/deinterlace2/gstdeinterlace2.h:
	Call the current instance "self" instead of "object".

2008-07-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/gstdeinterlace2.c:
	(gst_deinterlace_method_get_latency),
	(gst_deinterlace2_set_method), (gst_deinterlace2_class_init),
	(gst_deinterlace2_push_history), (gst_deinterlace2_chain),
	(gst_deinterlace2_setcaps), (gst_deinterlace2_src_query):
	* gst/deinterlace2/gstdeinterlace2.h:
	Include latency of the method in the returned latency.

	Fix outputting of all fields, i.e. doubling of the framerate.

2008-07-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/Makefile.am:
	* gst/deinterlace2/gstdeinterlace2.c: